--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^5.1.0",
     "express-fileupload": "^1.5.1",
     "fs": "^0.0.1-security",
+    "image-size": "^2.0.2",
+    "mime-types": "^3.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
     "path": "^0.12.7"
